@@ -1,5 +1,7 @@
 Revision history for Perl extension AnyEvent.
 
+	- take advantage of CLOCK_MONOTONIC, if available, in AnyEvent::Impl::Perl.
+
 3.3  Mon Apr 28 09:51:06 CEST 2008
         - added AnyEvent::Handle, AnyEvent::Socket and AnyEvent::Util modules.
         - fix a bug in the pure perl backend that kept watchers alive
